// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rule File > Main schema 1`] = `
"import type { Rule } from '../rule-config';
import type { RuleLevel } from '../rule-severity';
export interface MyRuleRule {
  /**
   * My rule description.
   *
   * @see [my-rule](http://test.com/my-rule)
   */
  'my-plugin/my-rule': Rule<[RuleLevel, number]>;
}
"
`;

exports[`Rule File > Object schema 1`] = `
"import type { Rule } from '../rule-config';
import type { RuleLevel } from '../rule-severity';
export interface MyRuleRule {
  /**
   * My rule description.
   *
   * @see [my-rule](http://test.com/my-rule)
   */
  'my-plugin/my-rule': Rule<
    [
      RuleLevel,
      ...{
        [k: string]: any;
      },
    ]
  >;
}
"
`;

exports[`Rule File > Side schemas 1`] = `
"import type { Rule } from '../rule-config';
import type { RuleLevel } from '../rule-severity';
export interface MyRuleRule {
  /**
   * My rule description.
   *
   * @see [my-rule](http://test.com/my-rule)
   */
  'my-plugin/my-rule': Rule<[RuleLevel, number, string]>;
}
"
`;

exports[`Rule File > Third schemas 1`] = `
"import type { Rule } from '../rule-config';
import type { RuleLevel } from '../rule-severity';
export interface MyRuleRule {
  /**
   * My rule description.
   *
   * @see [my-rule](http://test.com/my-rule)
   */
  'my-plugin/my-rule': Rule<[RuleLevel, number, string, boolean]>;
}
"
`;
